fix core checkstyles, and then go a bit overboard adding java 17 options all over the place. probably getting fully in to yak shave territory.